# dhall-mock

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  dev.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 0.0.1-milestone.md
.github/workflows/: docker.yml  master.yml  pr.yml  release.yml
dhall/: error.dhall  example.dhall  static.dhall  static2.dhall
dhall/Mock/: package.dhall
dockerfile/slim/: Dockerfile
examples/: logger.rs
examples/errors/: main.rs
lib/: libdl.so.2  libgcc_s.so.1
src/: cli.rs  lib.rs  main.rs  mock.rs  web.rs
src/compiler/: mod.rs
src/expectation/: model.rs
src/mock/: compilation.rs  mod.rs  model.rs  service.rs  xml.rs
src/mock/serde/: mod.rs
src/web/: admin.rs  mock.rs  mod.rs  utils.rs
tests/: api_tests.rs
