[package]
name = "dhall-mock"
version = "0.0.1"
authors = [
    "fteychene <francois.teychene@gmail.com>",
    "rlecomte <romain.lecomte@gmail.com>"
]
edition = "2018"

[dependencies]
serde = "1.0"
serde_dhall = "0.5"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.7"
colored = "1.9"
rustls = "0.17"