[package]
name = "dhall-mock"
version = "0.0.1"
authors = [
    "fteychene <francois.teychene@gmail.com>",
    "rlecomte <romain.lecomte@gmail.com>"
]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_dhall = "0.5"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.7"
colored = "1.9"
rustls = "0.17"
hyper = "0.13"
tokio = { version = "0.2", features = ["full", "time"] }
bytes = "0.5"
structopt = "0.3"
signal-hook = "0.1"
reqwest = { version = "0.10", features = ["blocking"] }
get-port = "1.3.1"
lazy_static = "1.4.0"