[package]
name = "dhall-mock"
version = "0.2.0-SNAPSHOT"
authors = [
    "fteychene <francois.teychene@gmail.com>",
    "rlecomte <romain.lecomte@gmail.com>"
]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_dhall = "0.5"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.7"
colored = "1.9"
rustls = "0.17"
hyper = "0.13"
tokio = { version = "0.2", features = ["full", "time"] }
bytes = "0.5"
structopt = "0.3"
reqwest = { version = "0.10", features = ["blocking"] }
lazy_static = "1.4.0"
openssl-sys = "*"
url = "2.1.1"
rayon = "1.4.1"
rand = "0.7.3"
futures = "0.3.6"
retry = "1.1.0"
quick-xml = "0.18.1"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
default = ["vendored"]
vendored = ["openssl-sys/vendored"]
